tests/error/string_literal_field_branch_overwrite.vow
// TEST: error-code RegionLiteralMutation
module StringLiteralFieldBranchOverwrite

struct Box {
    s: String,
}

fn main() -> i32 [io] {
    let b: Box = Box { s: String::from("b") };
    if true {
        b.s = "a";
    }
    b.s.push_byte(33);
    0
}
